--- a/home.html
+++ b/home.html
@@ -9,6 +9,7 @@
         <div class="header" id="myHeader">
             <h2>Header</h2>
         </div>
+        <div></div>
         <div class="container" id="imageText">
             <img id="zoro" src="zoro-header.png" alt="zoro">
             <div class="text-block">
@@ -39,7 +40,34 @@
             <p>These are the values that keep us focused on what really matters. We developed them with input from team members
                  across the company—and we live them out every day, 
                  keeping them in mind as we tackle each new project, meeting, and initiative.</p>
+            <h1> At Zoro, We… </h1>     
         </div>
+        <div class="images"> 
+            <img id="img1" src="1.svg">
+            <div style="display:inline-block" class="img1">
+                <h3 id="h22"><strong> Win & Lose Together (We prefer winning!) </strong> </h3>
+                <p id="h22"> We celebrate our accomplishments and learn from our failures.</p>
+            </div>
+            <img id="img2" src="4.svg">
+            <div style="display:inline-block" class="img1">
+                <h3 id="h22"><strong>  Take Ownership  </strong> </h3>
+                <p id="h22"> We all are empowered and accountable to take risks and find a better way.</p>
+            </div>
+            <img id="img3" src="2.svg">
+            <div style="display:inline-block" class="img2">
+                <h3 id="h22"><strong>   Are Transparent   </strong> </h3>
+                <p id="h22">  We are open, honest, and candid with each other.</p>
+            </div>
+
+            <img id="img4" src="3.svg">
+            <div style="display:inline-block" class="img2">
+                <h3 id="h22"><strong>   Aspire to Be Customer-Obsessed   </strong> </h3>
+                <p id="h22">Our customers are everything to us.</p>
+            </div>
+            <img id="last" src="5.png">
+            <img id="last2" src="6.png">
+        </div>
+       
 
         <script src="js.js" ></script>
     </body>
