--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
             <p>At Zoro, we pride ourselves on making sure our team members are taken 
                 care of—while also building a culture where 
                 our employees can bring their authentic selves to work and have a little bit of fun in the process.</p>
-            <button class="btn"> View Our Open Positions</button>
+            <button onclick="openAlert()" class="btn"> View Our Open Positions</button>
         </div>
         
         <div class="container2" id="page2">
